--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@ $(document).ready(function() {
 
 {% endblock %}
 
-{% include 'includes/navbar.html' %}
+{% include 'includes/footer.html' %}
 
 </body>
 </html>
