--- a/templates/store/detail.html
+++ b/templates/store/detail.html
@@ -68,7 +68,7 @@
 	</div> <!-- row.// -->
 	<hr>
 	{% if product.stock > 0 %}
-		<a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i></a>
+		<a href="{% url 'add-cart' product.id %}" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i></a>
 	{% else %}
 		<h4 class="text-danger">Out Of Stock</h4>
 	{% endif %}
