adding pagenator and modifing cart details

--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -5,7 +5,11 @@
 <div class="container">
 
 <!-- ============================ COMPONENT 1 ================================= -->
-
+{% if not cart_item %}
+	<h2 class="text-center">Your basket is Empty</h2>
+	<br>
+	<a href="{% url 'store' %}" class="btn btn-primary">Continue shopping</a>
+{% else %}
 <div class="row">
 	<aside class="col-lg-9">
 <div class="card">
@@ -19,12 +23,13 @@
 </tr>
 </thead>
 <tbody>
+{% for item in cart_item %}
 <tr>
 	<td>
 		<figure class="itemside align-items-center">
-			<div class="aside"><img src="{% static './images/items/11.jpg' %}" class="img-sm"></div>
+			<div class="aside"><img src="{{ item.product.image.url }}" class="img-sm"></div>
 			<figcaption class="info">
-				<a href="#" class="title text-dark">Camera Canon EOS M50 Kit</a>
+				<a href="{{ item.product.get_url }}" class="title text-dark">{{ item.product.product_name }}</a>
 				<p class="text-muted small">Matrix: 25 Mpx <br> Brand: Canon</p>
 			</figcaption>
 		</figure>
@@ -34,25 +39,26 @@
 					<div class="col">
 						<div class="input-group input-spinner">
 							<div class="input-group-prepend">
-							<button class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </button>
+							<a href="{% url 'decrease-cart' item.product.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
 							</div>
-							<input type="text" class="form-control"  value="1">
+							<input type="text" class="form-control"  value="{{ item.quantity }}">
 							<div class="input-group-append">
-							<button class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </button>
+							<a href="{% url 'add-cart' item.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
 							</div>
 						</div> <!-- input-group.// -->
 					</div> <!-- col.// -->
 	</td>
 	<td>
 		<div class="price-wrap">
-			<var class="price">$1156.00</var>
-			<small class="text-muted"> $315.20 each </small>
+			<var class="price">${{ item.pro_total }}</var>
+			<small class="text-muted"> $ {{ item.product.price }} each </small>
 		</div> <!-- price-wrap .// -->
 	</td>
 	<td class="text-right">
-	<a href="" class="btn btn-danger"> Remove</a>
+	<a href="{% url 'remove-cart' item.product.id %}" class="btn btn-danger"> Remove</a>
 	</td>
 </tr>
+{% endfor %}
 </tbody>
 </table>
 </div> <!-- card.// -->
@@ -64,7 +70,7 @@
 		<div class="card-body">
 			<dl class="dlist-align">
 			  <dt>Total price:</dt>
-			  <dd class="text-right">$69.97</dd>
+			  <dd class="text-right">$ {{ total }}</dd>
 			</dl>
 			<dl class="dlist-align">
 			  <dt>Tax:</dt>
@@ -87,6 +93,7 @@
 
 
 </div> <!-- row.// -->
+{% endif %}
 <!-- ============================ COMPONENT 1 END .// ================================= -->
 
 </div> <!-- container .//  -->
