--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -120,7 +120,9 @@
 
 <header class="border-bottom mb-4 pb-3">
 		<div class="form-inline">
-			<span class="mr-md-auto">{{ product_count }} Items found </span>
+			{% if product_count %}
+				<span class="mr-md-auto">{{ product_count }} Item{% if product_count > 1 %}s{% endif %} found </span>
+			{% endif %}
 
 		</div>
 </header><!-- sect-heading -->
@@ -141,11 +143,31 @@
 						<span class="price">$ {{ product.price }}</span>
 					</div> <!-- price-wrap.// -->
 				</div>
-				<a href="#" class="btn btn-block btn-success">Add to cart </a>
+				<a href="{% url 'add-cart' product.id %}" class="btn btn-block btn-success">Add to cart </a>
 			</figcaption>
 		</figure>
 	</div> <!-- col.// -->
 	{% endfor %}
 </div> <!-- row end.// -->
-
+<nav class="mt-4" aria-label="Page navigation sample">
+	<ul class="pagination">
+		{% if page_obj.has_previous %}
+			<li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a></li>
+		{% else %}
+			<li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+		{% endif %}
+		{% for i in page_obj.paginator.page_range %}
+			{% if page_obj.number == i %}
+				<li class="page-item active"><a class="page-link" href="#">{{ i }}</a></li>
+			{% else %}
+				<li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+			{% endif %}
+		{% endfor %}
+		{% if page_obj.has_next %}
+			<li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a></li>
+		{% else %}
+			<li class="page-item disabled"><a class="page-link" href="#">Next</a></li>
+		{% endif %}
+	</ul>
+</nav>
 {% endblock %}
