select variation functionalty for cart

--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -30,7 +30,7 @@
 			<div class="aside"><img src="{{ item.product.image.url }}" class="img-sm"></div>
 			<figcaption class="info">
 				<a href="{{ item.product.get_url }}" class="title text-dark">{{ item.product.product_name }}</a>
-				<p class="text-muted small">Matrix: 25 Mpx <br> Brand: Canon</p>
+				<p class="text-muted small">{{ item.variation.category }}<br> Brand: Canon</p>
 			</figcaption>
 		</figure>
 	</td>
