--- a/templates/store/detail.html
+++ b/templates/store/detail.html
@@ -16,68 +16,56 @@
 </article> <!-- gallery-wrap .end// -->
 		</aside>
 		<main class="col-md-6 border-left">
-<article class="content-body">
+			<form action="{% url 'add-cart' product.id %}" method="POST">
+				{% csrf_token %}
+				<article class="content-body">
 
-<h2 class="title">{{ product.product_name }}</h2>
+				<h2 class="title">{{ product.product_name }}</h2>
 
-<div class="mb-3">
-	<var class="price h4">$ {{ product.price }}</var>
-</div>
+				<div class="mb-3">
+					<var class="price h4">$ {{ product.price }}</var>
+				</div>
 
-<p>{{ product.description }}</p>
+				<p>{{ product.description }}</p>
 
 
-<hr>
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Choose Color</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Silver
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color" > Gray
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color checked"> Gold
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> Black
-			  </label>
-			</div>
-		</div>
-	</div> <!-- row.// -->
-	<div class="row">
-		<div class="item-option-select">
-			<h6>Select Size</h6>
-			<div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> S
-			  </label>
-			  <label class="btn btn-light active">
-			    <input type="radio" name="radio_color" checked> M
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> L
-			  </label>
-			  <label class="btn btn-light">
-			    <input type="radio" name="radio_color"> XL
-			  </label>
-			</div>
-		</div>
-	</div> <!-- row.// -->
-	<hr>
-	{% if product.stock > 0 %}
-		{% if in_cart %}
-			<a href="#" class="btn  btn-success disabled"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i></a>
-			<a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i></a>
-		{% else %}
-			<a href="{% url 'add-cart' product.id %}" class="btn  btn-primary"> <span class="text">Add to Cart</span> <i class="fas fa-shopping-cart"></i></a>
-		{% endif %}
-	{% else %}
-		<h4 class="text-danger">Out Of Stock</h4>
-	{% endif %}
-</article> <!-- product-info-aside .// -->
+				<hr>
+					<div class="row">
+						<div class="item-option-select">
+							<h6>Choose Color</h6>
+							<select name="color" class="form-control" required>
+								<option value="" disabled selected>Choose</option>
+								{% for i in product.variation_set.color %}
+								<option value="{{ i.variation_value }}">{{ i.variation_value }}</option>
+								{% endfor %}
+							</select>
+						</div>
+					</div> <!-- row.// -->
+					<div class="row">
+						<div class="item-option-select">
+							<h6>Select Size</h6>
+							<select name="size" class="form-control" required>
+								<option value="" disabled selected>Choose</option>
+								{% for i in product.variation_set.size %}
+								<option value="{{ i.variation_value }}">{{ i.variation_value }}</option>
+								{% endfor %}
+							</select>
+						</div>
+					</div> <!-- row.// -->
+					<hr>
+					{% if product.stock > 0 %}
+						{% if in_cart %}
+							<button class="btn  btn-primary"> <span class="text">Add to Cart</span> <i class="fas fa-shopping-cart"></i></button>
+							<a href="#" class="btn  btn-success disabled"> <span class="text">Added to Cart</span> <i class="fas fa-check"></i></a>
+							<a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i></a>
+						{% else %}
+							<button class="btn  btn-primary"> <span class="text">Add to Cart</span> <i class="fas fa-shopping-cart"></i></button>
+						{% endif %}
+					{% else %}
+						<h4 class="text-danger">Out Of Stock</h4>
+					{% endif %}
+				</article> <!-- product-info-aside .// -->
+				</form>
 		</main> <!-- col.// -->
 	</div> <!-- row.// -->
 </div> <!-- card.// -->
